--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "animate": "^1.0.0",
+    "font-awesome": "^4.7.0",
     "vue": "^2.1.0"
   },
   "devDependencies": {
