--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "vue-loader": "^10.0.0",
     "vue-router": "^2.2.0",
     "vue-template-compiler": "^2.1.0",
+    "vuex": "^2.2.1",
     "webpack": "^2.1.0-beta.25",
     "webpack-dev-server": "^2.1.0-beta.9"
   }
